--- a/arxiv/2024_06_arxiv.html
+++ b/arxiv/2024_06_arxiv.html
@@ -86,6 +86,49 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.03525">https://arxiv.org/abs/2406.03525</a></span> Theory of Correlated Insulator(s) and Superconductor at ν = 1 in Twisted WSe2 ***** (Sunghoon Kim, Debanjan Chowdhury)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.03670">https://arxiv.org/abs/2406.03670</a></span> Field Theory for Superconducting Branes and Generalized Particle-Vortex Duality</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.03538">https://arxiv.org/abs/2406.03538</a></span> Electronic structure of topological defects in the pair-density-wave superconductor (Eduardo Fradkin)</p>
+<br>
+<p class="p1">20240610</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.04990">https://arxiv.org/abs/2406.04990</a></span> Caloric properties of materials near a tricritical point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.04415">https://arxiv.org/abs/2406.04415</a></span> Unconventional discontinuous transitions in isospin systems **** (Zachary M. Raines, Leonid I. Glazman, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.04416">https://arxiv.org/abs/2406.04416</a></span> Unconventional discontinuous transitions in a 2D system with spin and valley degrees of freedom **** (Zachary M. Raines, Leonid I. Glazman, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.04919">https://arxiv.org/abs/2406.04919</a></span> Anomaly inflow for dipole symmetry and higher form foliated field theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.08300">https://arxiv.org/abs/2309.08300</a></span> Subsystem symmetries, critical Bose surface, and immobile excitations in an extended compass model ****</p>
+<p class="p2"><br></p>
+<p class="p1">20240611</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.05385">https://arxiv.org/abs/2406.05385</a></span> Topological Classification of Insulators: II. Quasi-Two-Dimensional Locality ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.05939">https://arxiv.org/abs/2406.05939</a></span> Revisiting the magnetic responses of bilayer graphene from the perspective of the quantum distance *** (Chang-geun Oh, Jun-Won Rhim, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06414">https://arxiv.org/abs/2406.06414</a></span> Quadratic dispersion relations in gapless frustration-free systems (Rintaro Masaoka, Tomohiro Soejima, Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06415">https://arxiv.org/abs/2406.06415</a></span> Rigorous lower bound of dynamic critical exponents in critical frustration-free systems (Rintaro Masaoka, Tomohiro Soejima, Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.05407">https://arxiv.org/abs/2406.05407</a></span> Exact quantization of topological order parameter in SU(N) spin models, N-ality transformation and ingappabilities (Akira Furusaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.05842">https://arxiv.org/abs/2406.05842</a></span> Replica symmetry breaking in spin glasses in the replica-free Keldysh formalism **** (Johannes Lang, Subir Sachdev, Sebastian Dieh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06121">https://arxiv.org/abs/2406.06121</a></span> Hawking-Page and entanglement phase transition in 2d CFT on curved backgrounds</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.05454">https://arxiv.org/abs/2406.05454</a></span> Generating Lattice Non-invertible Symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.01519">https://arxiv.org/abs/2112.01519</a></span> Long-Range Entanglement from Measuring Symmetry-Protected Topological Phases (Nathanan Tantivasadakarn, Ryan Thorngren, Ashvin Vishwanath, Ruben Verresen)</p>
+<p class="p2"><br></p>
+<p class="p1">20240612</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06676">https://arxiv.org/abs/2406.06676</a></span> Critical Filaments and Superconductivity in Quasiperiodic Twisted Bilayer Graphene (Justin H. Wilson, Matthew S. Foster)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.07417">https://arxiv.org/abs/2406.07417</a></span> Average-exact mixed anomalies and compatible phases **** (Yichen Xu, Chao-Ming Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06783">https://arxiv.org/abs/2406.06783</a></span> Quantum weight **** (Yugo Onishi, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06961">https://arxiv.org/abs/2406.06961</a></span> Non-Hermitian spacetime and generalized thermofield double formalism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.07334">https://arxiv.org/abs/2406.07334</a></span> Fractonic solids ****</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06698">https://arxiv.org/abs/2406.06698</a></span> Ferromagnets, a New Anomaly, Instantons, and (noninvertible) Continuous Translations ***** (Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06686">https://arxiv.org/abs/2406.06686</a></span> Anomalies in Covariant Fracton Theories *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.02008">https://arxiv.org/abs/2309.02008</a></span> Bethe Ansatz ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.01760">https://arxiv.org/abs/2403.01760</a></span> Markovian Quantum Computation ***** (Jaeyoon Cho)</p>
+<p class="p2"><br></p>
+<p class="p1">20240613</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.08355">https://arxiv.org/abs/2406.08355</a></span> Z2 gauge field and topological chirality from Umklapp scattering in twisted graphite</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.07939">https://arxiv.org/abs/2406.07939</a></span> Representation-protected topology of spin-singlet s-wave superconductors (Akira Furusaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.07608">https://arxiv.org/abs/2406.07608</a></span> Strange metal and superconductor in the two-dimensional Yukawa-Sachdev-Ye-Kitaev model ***** (Chenyuan Li, Davide Valentinis, Aavishkar A. Patel, Haoyu Guo, Jörg Schmalian, Subir Sachdev, Ilya Esterlis)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.09261">https://arxiv.org/abs/2406.09261</a></span> Non-Invertible Surface Defects in 2+1d QFTs from Half Spacetime Gauging</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.09259">https://arxiv.org/abs/2406.09259</a></span> Freudenthal Duality in Conformal Field Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20240614</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.08868">https://arxiv.org/abs/2406.08868</a></span> Dissipative Superfluidity in a Molecular Bose-Einstein Condensate *** (Masaya Nakagawa, Masahito Ueda)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.08542">https://arxiv.org/abs/2406.08542</a></span> Symmetry enforced entanglement in maximally mixed states (Chong Wang, Timothy H. Hsieh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.08706">https://arxiv.org/abs/2406.08706</a></span> Linear spectroscopy of collective modes and the gap structure in two-dimensional superconductors (Y. Oreg, E. Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.08501">https://arxiv.org/abs/2406.08501</a></span> Foundational Issues in Group Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.01681">https://arxiv.org/abs/2406.01681</a></span> <b>Gross-Neveu-Yukawa theory of SO(2N)→SO(N)×SO(N) spontaneous symmetry breaking ****** (SangEun Han and Igor F. Herbut)</b></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
