--- a/arxiv/2024_06_arxiv.html
+++ b/arxiv/2024_06_arxiv.html
@@ -129,6 +129,50 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.08706">https://arxiv.org/abs/2406.08706</a></span> Linear spectroscopy of collective modes and the gap structure in two-dimensional superconductors (Y. Oreg, E. Berg)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.08501">https://arxiv.org/abs/2406.08501</a></span> Foundational Issues in Group Field Theory</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.01681">https://arxiv.org/abs/2406.01681</a></span> <b>Gross-Neveu-Yukawa theory of SO(2N)→SO(N)×SO(N) spontaneous symmetry breaking ****** (SangEun Han and Igor F. Herbut)</b></p>
+<br>
+<p class="p1">20240617</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.09555">https://arxiv.org/abs/2406.09555</a></span> Approximate quantum error correcting codes from conformal field theory (Timothy H. Hsieh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.08567">https://arxiv.org/abs/2406.08567</a></span> Highly-entangled stationary states from strong symmetries (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.10186">https://arxiv.org/abs/2406.10186</a></span> Impurities with a cusp: general theory and 3d Ising (Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.09505">https://arxiv.org/abs/2406.09505</a></span> A Novel Perspective on Ideal Chern Bands with Strong Short-Range Repulsion: Applications to Correlated Metals, Superconductivity, and Topological Order (Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.15916">https://arxiv.org/abs/2309.15916</a></span> Emergent Quantum Phenomena of Noncentrosymmetric Charge-Density Wave in 1T-Transition Metal Dichalcogenides **** (Cheong-Eung Ahn, Kyung-Hwan Jin, Young-Jae Choi, Jae Whan Park, Han Woong Yeom, Ara Go, Yong Baek Kim, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.09508">https://arxiv.org/abs/2406.09508</a></span> A Lightning Introduction to String Theory ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05179">https://arxiv.org/abs/2208.05179</a></span> Introduction to string theory *****</p>
+<p class="p2"><br></p>
+<p class="p1">20240618</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.11677">https://arxiv.org/abs/2406.11677</a></span> Neural Quantum State Study of Fracton Models ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.11788">https://arxiv.org/abs/2406.11788</a></span> Holographic Classical Shadow Tomography (Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.10503">https://arxiv.org/abs/2406.10503</a></span> Quantum criticality and optical conductivity in a two-valley system ***** (Yasha Gindikin, Songci Li, Alex Levchenko, Alex Kamenev, Andrey V. Chubukov, Dmitrii L. Maslov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.11796">https://arxiv.org/abs/2406.11796</a></span> Stochastic theory of nonlinear electrical circuits in thermal equilibrium (Andrew Osborne, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.10334">https://arxiv.org/abs/2406.10334</a></span> A spin chain with non-Hermitian PT-symmetric boundary couplings: exact solution, dissipative Kondo effect, and phase transitions on the edge (J. H. Pixley, Natan Andrei)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.11112">https://arxiv.org/abs/2406.11112</a></span> Universal bound on Ergotropy and No-Go Theorem by the Eigenstate Thermalization Hypothesis (Masahito Ueda)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.17824">https://arxiv.org/abs/2402.17824</a></span> Quantum spin glasses and Sachdev-Ye-Kitaev models ***** (Subir Sachdev)</p>
+<p class="p2"><br></p>
+<p class="p1">20240619</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12850">https://arxiv.org/abs/2406.12850</a></span> Machine learning guided discovery of stable, spin-resolved topological insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12820">https://arxiv.org/abs/2406.12820</a></span> Realizing string-net condensation: Fibonacci anyon braiding for universal gates and sampling chromatic polynomials (Juven Wang, Ady Stern, Eun-Ah Kim, Chao-Ming Jian, Guanyu Zhu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12825">https://arxiv.org/abs/2406.12825</a></span> Theory of Coulomb driven nematicity in a multi-valley two-dimensional electron gas (Erez Berg, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.11969">https://arxiv.org/abs/2406.11969</a></span> Probing quantum chaos through singular-value correlations in sparse non-Hermitian SYK model ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12068">https://arxiv.org/abs/2406.12068</a></span> Hierarchy construction for non-abelian fractional quantum Hall states via anyon condensation ***** (Carolyn Zhang, Ashvin Vishwanath, Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12729">https://arxiv.org/abs/2406.12729</a></span> Spin-Peierls instability of deconfined quantum critical points **** (Urban F. P. Seifert, Johannes Knolle)</p>
+<p class="p2"><br></p>
+<p class="p1">20240621</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.14188">https://arxiv.org/abs/2406.14188</a></span> Anisptropic plasmons in threefold Hopf semimetals (Seongjin Ahn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12978">https://arxiv.org/abs/2406.12978</a></span> Tensor networks for non-invertible symmetries in 3+1d and beyond **** (Pranay Gorantla, Shu-Heng Shao, Nathanan Tantivasadakarn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.13643">https://arxiv.org/abs/2406.13643</a></span> Geometry of Classical Nambu-Goldstone Fields **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.13671">https://arxiv.org/abs/2406.13671</a></span> Topological Equivalence Theorem and Double-Copy for Chern-Simons Scattering Amplitudes ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.13740">https://arxiv.org/abs/2406.13740</a></span> Kinetic Inductance, Quantum Geometry, and Superconductivity in Magic-Angle Twisted Bilayer Graphene (Pablo Jarillo-Herrero, William D. Oliver)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.13742">https://arxiv.org/abs/2406.13742</a></span> Superfluid stiffness of twisted multilayer graphene superconductors (Pablo Jarillo-Herrero, Pavel A. Volkov, Ashvin Vishwanath1, Kin Chung Fong, Philip Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.13799">https://arxiv.org/abs/2406.13799</a></span> Observation of Electronic Viscous Dissipation in Graphene Magneto-thermal Transport (Philip Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12964">https://arxiv.org/abs/2406.12964</a></span> Vortex structure in a d-wave superconductor obtained by a confinement transition from the pseudogap metal ***** (Jia-Xin Zhang, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12965">https://arxiv.org/abs/2406.12965</a></span> Spin mechanism of drag resistance in strongly-correlated electron liquids *** (Dmitry Zverevich, Ilya Esterlis, Alex Levchenko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12967">https://arxiv.org/abs/2406.12967</a></span> Fluctuation Spectrum of Critical Fermi Surfaces ***** (Haoyu Guo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12971">https://arxiv.org/abs/2406.12971</a></span> Superconductor-Insulator Transition in TMD moir ́e systems and the Deconfined Quantum Critical Point ***** (Nayan Myerson-Jain, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1905.00435">https://arxiv.org/abs/1905.00435</a></span> Anomaly indicators for topological orders with U (1) and time-reversal symmetry **** (Matthew F. Lapa, Michael Levin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.09450">https://arxiv.org/abs/2405.09450</a></span> Space of non-Fermi liquids ***** (Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.05842">https://arxiv.org/abs/2406.05842</a></span> Replica symmetry breaking in spin glasses in the replica-free Keldysh formalism ***** (Johannes Lang, Subir Sachdev, Sebastian Diehl)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.07608">https://arxiv.org/abs/2406.07608</a></span> Strange metal and superconductor in the two-dimensional Yukawa-Sachdev-Ye-Kitaev model ***** (Chenyuan Li, Davide Valentinis, Aavishkar A. Patel, Haoyu Guo, Jörg Schmalian, Subir Sachdev, Ilya Esterlis)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.19421">https://arxiv.org/abs/2405.19421</a></span> String Field Theory: A Review ***** (Ashoke Sen, Barton Zwiebach)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
