--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@ TA class materials: <a href="taclass.html">here</a>
 <a href="https://arxiv.org/find/all/1/au:+han_sangeun/0/1/0/all/0/1" class="publink">Publications on <img src="img/arXiv_logo.svg" height="17px" style="vertical-align: bottom;" alt="arXiv"></a><br>
 <a href="https://inspirehep.net/authors/1939891" class="publink">Publications on <img src="img/INSPIRE_logo.svg" height="17px" style="vertical-align: bottom;" alt="INSPIRE"></a><br>
 <a href="https://orcid.org/0000-0003-3141-1964" class="publink">Publications on <img src="img/ORCID_iD.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"><img src="img/ORCID_logo.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"></a><br>
-<a href="https://www.researchgate.net/profile/Sangeun-Han" class="publink">Publications on <img src="img/ResearchGate_icon.svg" height="17px" style="vertical-align: bottom;" alt="ResearchGate"><img src="img/ResearchGate_logo.svg" height="17px" style="vertical-align: bottom;" alt="ResearchGate"></a>
+<a href="https://www.researchgate.net/profile/Sangeun-Han" class="publink">Publications on <img src="img/ResearchGate_icon.svg" height="17px" style="vertical-align: bottom;" alt="ResearchGate"><img src="img/ResearchGate_logo.svg" height="17px" style="vertical-align: bottom;" alt="ResearchGate"></a><br>
+<a href="https://www.linkedin.com/in/sangeun-han-84742a12b" class="publink">Publications on <img src="img/LinkedIn_logo_dark.svg" height="17px" style="vertical-align: bottom;" alt="LinkedIn"></a><br>
+<a href="https://www.webofscience.com/wos/author/record/KRP-6776-2024" class="publink">Publications on <img src="img/Web_of_Science_Logo.svg" height="17px" style="vertical-align: bottom;" alt="Web of Science"></a><br>
+<a href="https://www.scopus.com/authid/detail.uri?authorId=57271129800" class="publink">Publications on <img src="img/Scopus_logo.svg" height="17px" style="vertical-align: bottom;" alt="Scopus"></a>
 <br><br>
 Articles related to my works:
 <br>
