--- a/arxiv/2024_06_arxiv.html
+++ b/arxiv/2024_06_arxiv.html
@@ -173,6 +173,67 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.05842">https://arxiv.org/abs/2406.05842</a></span> Replica symmetry breaking in spin glasses in the replica-free Keldysh formalism ***** (Johannes Lang, Subir Sachdev, Sebastian Diehl)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.07608">https://arxiv.org/abs/2406.07608</a></span> Strange metal and superconductor in the two-dimensional Yukawa-Sachdev-Ye-Kitaev model ***** (Chenyuan Li, Davide Valentinis, Aavishkar A. Patel, Haoyu Guo, Jörg Schmalian, Subir Sachdev, Ilya Esterlis)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.19421">https://arxiv.org/abs/2405.19421</a></span> String Field Theory: A Review ***** (Ashoke Sen, Barton Zwiebach)</p>
+<br>
+<p class="p1">20240624</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.15350">https://arxiv.org/abs/2406.15350</a></span> Nature of Andreev bound states in Josephson junctions of triple-point semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.14617">https://arxiv.org/abs/2406.14617</a></span> Non-Abelian spin Hall insulator (Ahmed Abouelkomsan, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.14688">https://arxiv.org/abs/2406.14688</a></span> Absence of a bulk charge density wave signature in x-ray measurements of UTe2</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.14690">https://arxiv.org/abs/2406.14690</a></span> Absence of bulk charge density wave order in the normal state of UTe2</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.14714">https://arxiv.org/abs/2406.14714</a></span> Absence of a Bulk Thermodynamic Phase Transition to a Density Wave Phase in UTe2</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.14858">https://arxiv.org/abs/2406.14858</a></span> A mechanism for quantum-critical Planckian metal phase in high-temperature cuprate superconductors ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.15145">https://arxiv.org/abs/2406.15145</a></span> Quantum geometrical properties of topological materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.15342">https://arxiv.org/abs/2406.15342</a></span> Chern-Textured Exciton Insulators with Valley Spiral Order in Moir ́e Materials (Ziwei Wang, Yves H. Kwan, Glenn Wagner, Steven H. Simon, Nick Bultinck, S.A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.15343">https://arxiv.org/abs/2406.15343</a></span> Textured Exciton Insulators (Yves H. Kwan, Ziwei Wang, Glenn Wagner, Steven H. Simon, S.A. Parameswaran, Nick Bultinck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.00046">https://arxiv.org/abs/2311.00046</a></span> Temperature Dependence of Energy Transport in the Z3 Chiral Clock Model (Yongchan Yoo, Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.14879">https://arxiv.org/abs/2406.14879</a></span> Improved bounds on quantum uncommon information (Yonghae Lee, Joonwoo Bae, Hayata Yamasaki, Soojoon Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20240625</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.15557">https://arxiv.org/abs/2406.15557</a></span> Observation of a non-Hermitian supersonic mode ***** (Yuxuan Zhang, Juan Carrasquilla, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.16700">https://arxiv.org/abs/2406.16700</a></span> Anomalies in mirror symmetry enriched topological orders **** (Yang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.16799">https://arxiv.org/abs/2406.16799</a></span> Correlation functions for the Gross-Neveu model</p>
+<p class="p2"><br></p>
+<p class="p1">20240626</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.11972">https://arxiv.org/abs/2305.11972</a></span> Parity anomaly with impurities and the Pauli–Villars subtraction</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.16763">https://arxiv.org/abs/2406.16763</a></span> Tensor renormalization group study of the three-dimensional SU(2) and SU(3) gauge theories with the reduced tensor network formulation ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17059">https://arxiv.org/abs/2406.17059</a></span> Exactly solvable non-unitary time evolution in quantum critical systems I: Effect of complex spacetime metrics **** (Xueda Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17515">https://arxiv.org/abs/2406.17515</a></span> Percolation renormalization group analysis of confinement in Z2 lattice gauge theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17036">https://arxiv.org/abs/2406.17036</a></span> Superconductivity from spin-canting fluctuations in rhombohedral graphene **** (Jason Alicea)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17194">https://arxiv.org/abs/2406.17194</a></span> Field-Dependent Metrics and Higher-Form Symmetries in Duality-Invariant Theories of Non-Linear Electrodynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17205">https://arxiv.org/abs/2406.17205</a></span> Correlators of Worldline Proper Length</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17042">https://arxiv.org/abs/2406.17042</a></span> Critical properties of metallic and deconfined quantum critical points in Dirac systems ***** (Zi Hong Liu, Matthias Vojta, Fakher F. Assaad, Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17645">https://arxiv.org/abs/2406.17645</a></span> Simulating moir ́e quantum matter with neural network (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17187">https://arxiv.org/abs/2406.17187</a></span> Quantum-geometry-facilitated pair density wave order: Density matrix renormalization group study</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17029">https://arxiv.org/abs/2406.17029</a></span> Unconventional superconductivity from electronic dipole fluctuations ***** (Jörg Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17023">https://arxiv.org/abs/2406.17023</a></span> Quantum Geometry and Entanglement in Two-dimensional Insulators: A View from the Corner Charge Fluctuation (Pok Man Tam)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.00039">https://arxiv.org/abs/2311.00039</a></span> Carrollian Supersymmetry and SYK-like models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17011">https://arxiv.org/abs/2406.17011</a></span> Four-point functions and contact terms from higher-spin Ward identities of Chern-Simons-matter theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.12967">https://arxiv.org/abs/2406.12967</a></span> Fluctuation Spectrum of Critical Fermi Surfaces ***** (Haoyu Guo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17068">https://arxiv.org/abs/2406.17068</a></span> Probabilistic Definition of the Schwarzian Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17069">https://arxiv.org/abs/2406.17069</a></span> Large Deviations of the Schwarzian Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17071">https://arxiv.org/abs/2406.17071</a></span> Probabilistic Correlation Functions of the Schwarzian Field Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20240627</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.18234">https://arxiv.org/abs/2406.18234</a></span> Measurement-Induced Spectral Transition</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17919">https://arxiv.org/abs/2406.17919</a></span> Majorana representation for topological edge states of massless Dirac fermion with non-quantized Berry phase</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.18028">https://arxiv.org/abs/2406.18028</a></span> Plasmonic polarization sensing of electrostatic superlattice potentials (Pablo. Jarillo-Herrero, Philip Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17958">https://arxiv.org/abs/2406.17958</a></span> Local/Short-range conformal field theories from long-range perturbation theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.18419">https://arxiv.org/abs/2406.18419</a></span> SOLUTION OF SOME TILING OPEN PROBLEMS OF PROPP, LAI, AND SOME RELATED RESULTS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.18475">https://arxiv.org/abs/2406.18475</a></span> Strong wave turbulence in strongly local large N theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2401.17357">https://arxiv.org/abs/2401.17357</a></span> Mixed-state quantum anomaly and multipartite entanglement (Meng Cheng, Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.14939">https://arxiv.org/abs/2405.14939</a></span> Realizing triality and p-ality by lattice twisted gauging in (1+1)d quantum spin systems (Da-Chuan Lu, Yi-Zhuang You)</p>
+<p class="p2"><br></p>
+<p class="p1">20240628</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.19386">https://arxiv.org/abs/2406.19386</a></span> Robust Hilbert space fragmentation in group-valued loop models (Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.19104">https://arxiv.org/abs/2406.19104</a></span> Networks with many structural scales: a Renormalization Group perspective</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.18654">https://arxiv.org/abs/2406.18654</a></span> Topological bound on structure factor (Yugo Onishi, Liang Fu)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2406.19206">https://arxiv.org/abs/2406.19206</a><span class="s2"> Quantum Thermodynamics ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.19381">https://arxiv.org/abs/2406.19381</a></span> Spontaneous symmetry breaking in open quantum systems: strong, weak, and strong-to-weak *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.18644">https://arxiv.org/abs/2406.18644</a></span> Topological phases, van Hove singularities, and spin texture in magic-angle twisted bilayer graphene in the presence of proximity-induced spin-orbit couplings (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.18784">https://arxiv.org/abs/2406.18784</a></span> Self-consistent expansion and field-theoretic renormalization group for a singular nonlinear diffusion equation with anomalous scaling (Nigel Goldenfeld)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.19275">https://arxiv.org/abs/2406.19275</a></span> Fractal Subsystem Symmetries, Anomalies, Boundaries, and Effective Field Theory ***** (Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.18650">https://arxiv.org/abs/2406.18650</a></span> Magnetic Field Response of Dipolar-Octupolar Quantum Spin Ice ***** (Zhengbang Zhou, F ́elix Desrochers, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.12436">https://arxiv.org/abs/2402.12436</a></span> Excitonic quantum criticality: From bilayer graphene to narrow Chern bands *****<span class="Apple-converted-space">  </span>(Zhengyan Darius Shi, Hart Goldman, Zhihuan Dong, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.06162">https://arxiv.org/abs/2303.06162</a></span> Unconventional Gross-Neveu quantum criticality: interaction-induced SO(3)-biadjoint insulator and emergent SU(3) symmetry ***** (Shouryya Ray)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
