20240719_daily_arxiv_google_analytics_update

--- a/arxiv/2024_07_arxiv.html
+++ b/arxiv/2024_07_arxiv.html
@@ -115,6 +115,49 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.07951">https://arxiv.org/abs/2407.07951</a></span> A QCA for every SPT ***** (Lukasz Fidkowski, Jeongwan Haah, Matthew B. Hastings)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.07964">https://arxiv.org/abs/2407.07964</a></span> Non-invertible symmetries in finite group gauge theory ***** (Clay C ́ordova, Davi B. Costa, Po-Shen Hsin)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.11190">https://arxiv.org/abs/2205.11190</a></span> Boundary conditions and anomalies of conformal field theories in 1+1 dimensions ***** (Linhao Li, Chang-Tse Hsieh, Yuan Yao, Masaki Oshikawa)</p>
+<br>
+<p class="p1">20240715</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.08920">https://arxiv.org/abs/2407.08920</a></span> Chern Bands’ Optimally Localized Wannier Functions and Fractional Chern Insulators (Jennifer Cano, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.09204">https://arxiv.org/abs/2407.09204</a></span> Electron bubbles in highly excited states of the lowest Landau level (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.09458">https://arxiv.org/abs/2407.09458</a></span> Non-Hermitian Origin of Wannier Localizability and Detachable Topological Boundary States (Ken Shiozaki, Masatoshi Sato, Kohei Kawabata)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.08760">https://arxiv.org/abs/2407.08760</a></span> Hydrodynamics as the effective field theory of strong-to-weak spontaneous symmetry breaking (Xiaoyang Huang, Marvin Qi, Jian-Hao Zhang, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.09396">https://arxiv.org/abs/2407.09396</a></span> A Cordial Introduction to Double Scaled SYK</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.08962">https://arxiv.org/abs/2407.08962</a></span> Information vs Thermodynamic Entropy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.08786">https://arxiv.org/abs/2407.08786</a></span> Intrinsic mixed-state SPT from modulated symmetries and hierarchical structure of anomaly **** (Yizhi You, Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.08784">https://arxiv.org/abs/2407.08784</a></span> Breakdown of order-fractionalization in the CPT model *** (Alexei Tsvelik, Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.09452">https://arxiv.org/abs/2407.09452</a></span> Beyond the instanton gas approach: dominant thimbles approximation for the Hubbard model (Fakher F. Assaad)</p>
+<p class="p2"><br></p>
+<p class="p1">20240716</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.09599">https://arxiv.org/abs/2407.09599</a></span> The Drude weight of a flatband metal</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.09601">https://arxiv.org/abs/2407.09601</a></span> Hyperbolic Spin Liquids (Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.10963">https://arxiv.org/abs/2407.10963</a></span> Induction of non-Fermi liquids by critical cavity photons at the onset of superradiance (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.09604">https://arxiv.org/abs/2407.09604</a></span> Krylov complexity and chaos in deformed SYK models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.10269">https://arxiv.org/abs/2407.10269</a></span> Theory of an infinitely anisotropic phase of a two-dimensional superconductor (Zi-Xiang Li, Steven A. Kivelson, Dung-Hai Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.09713">https://arxiv.org/abs/2407.09713</a></span> The algebraic spin liquid in the SU(6) Heisenberg model on the kagome lattice</p>
+<p class="p2"><br></p>
+<p class="p1">20240717</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.11252">https://arxiv.org/abs/2407.11252</a></span> Dynamical Control of Excitons in Atomically Thin Semiconductors (Philip Kim, Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.11130">https://arxiv.org/abs/2407.11130</a></span> Geometric additivity of modular commutator for multipartite entanglement **** (Sung-Min Park, Isaac H. Kim, Eun-Gook Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.11319">https://arxiv.org/abs/2407.11319</a></span> The Structure of the Majorana Clifford Group **** (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.11116">https://arxiv.org/abs/2407.11116</a></span> Electron phonon coupling in the topological heavy fermion model of twisted bilayer graphene (Zhi-Da Song)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.11731">https://arxiv.org/abs/2407.11731</a></span> Tying knots in particle physics ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12360">https://arxiv.org/abs/2403.12360</a></span> Hydrodynamics, anomaly inflow and bosonic effective field theory ****</p>
+<p class="p2"><br></p>
+<p class="p1">20240718</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.12770">https://arxiv.org/abs/2407.12770</a></span> Deconfined quantum criticality of frustrated hard-core dipolar bosons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.12093">https://arxiv.org/abs/2407.12093</a></span> Relevance of Anisotropy in the Kondo Effect – Lessons From the Symplectic Case (Alexei M. Tsvelik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.12462">https://arxiv.org/abs/2407.12462</a></span> Affine Connection and Quantum Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.12755">https://arxiv.org/abs/2407.12755</a></span> Quantum vs. Symplectic Computers</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.00413">https://arxiv.org/abs/2405.00413</a></span> Four loop renormalization in six dimensions using Forcer ***** (J.A. Gracey)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.12692">https://arxiv.org/abs/2407.12692</a></span> Topological Semimetals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.13154">https://arxiv.org/abs/2402.13154</a></span> Disorder-free Sachdev-Ye-Kitaev models: Integrability and a precursor of chaos ***** (Hosho Katsura)</p>
+<p class="p2"><br></p>
+<p class="p1">20240719</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.13767">https://arxiv.org/abs/2407.13767</a></span> Topological insulators on fractal lattices: A general principle of construction (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.13758">https://arxiv.org/abs/2407.13758</a></span> Inducing topological flat bands in bilayer graphene with electric and magnetic superlattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.12912">https://arxiv.org/abs/2407.12912</a></span> Topological Kondo semimetal and insulator in AB-stacked heterobilayer transition metal dichalcogenides (Jennifer Cano, J. H. Pixley, Andrew Millis)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.13548">https://arxiv.org/abs/2407.13548</a></span> A tensorial approach to ‘altermagnetism’</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.13770">https://arxiv.org/abs/2407.13770</a></span> Moir ́e Fractional Chern Insulators IV: Fluctuation-Driven Collapse of FCIs in Multi-Band Exact Diagonalization Calculations on Rhombohedral Graphene (Jiabin Yu, Jonah Herzog-Arbeitman, Yves H. Kwan, Nicolas Regnault, B. Andrei Bernevig)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
